layout problems fixed

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,55 +10,8 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require_tree .
  *= require_self
+ *= require_tree ./common
  */
-@import "bootstrap-sprockets";
-@import "bootstrap";
-.data-coin{
-background-color: red;
-display: block;
-width: auto;
-height: auto;
-  p {
-    color: white;
-  }
-}
-.hidden{
-  display:none;
-}
- body {
-        background: -webkit-linear-gradient(top, #009999 , white); /* For Safari 5.1 to 6.0 */
-        background: -o-linear-gradient(bottom, #009999, white); /* For Opera 11.1 to 12.0 */
-        background: -moz-linear-gradient(bottom, #009999, white); /* For Firefox 3.6 to 15 */
-        background: linear-gradient(to bottom, #009999 , white); /* Standard syntax (must be last) */
-      }
-      div.col-md-4 {
-        border: 2px solid #a1a1a1;
-        padding: 15px 30px; 
-        background: white;
-        width: 300px;
-        height: 250px;
-        border-radius: 25px;
-        margin: 30px;
-      }
-      div.jumbotron {
-        border-radius: 25px;
-        margin: 80px 20px 20px 20px;
-      }
-      h1 {
-        text-align: center;
-      }
-      p {
-        text-align: center;
-      }
-      p.info {
-        text-align: left;
-        height: 100px;
-        overflow: hidden; 
-      }
-      div.row {
-        display: table;
-        margin: 0 auto;
-      }
-}
+
+ 
